<resources>
    <string name="app_name">MainDemo</string>
    <string name="sub_name">free your phone</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="featured_title">Featured Collections</string>
    <string name="discover_first_title">Popular Searches</string>
    <string name="discover_second_title">Colors</string>
    <string name="discover_third_title">Categories</string>


    <!-- Navigation Drawer menu labels -->
    <string name="wallpapers">Wallpapers</string>
    <string name="live_wallpapers">Live Wallpapers</string>
    <string name="ringtones">Ringtones</string>
    <string name="notifications">Notifications</string>
    <string name="icons">Icons</string>
    <string name="widgets">Widgets</string>
    <string name="games">Games</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="information">Information</string>


    <!-- Toolbar titles when navigation menu item is selected -->

    <string-array name="nav_item_activity_titles">
        <item>Wallpapers</item>
        <item>Live Wallpapers</item>
        <item>Ringtones</item>
        <item>Notifications</item>
        <item>Icons</item>
        <item>Widgets</item>
        <item>Games</item>

    </string-array>

</resources>