<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:scrollbarSize="1dp"
            android:scrollbarThumbVertical="@color/fragment_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/txt_first_title_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/discover_first_title"
                    android:textColor="@color/text_fragment"
                    android:textSize="@dimen/text_fragment"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/discover_first_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_first_title_discover"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>


                <TextView
                    android:id="@+id/txt_second_title_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/discover_first_list"
                    android:layout_marginBottom="7dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/discover_second_title"
                    android:textColor="@color/text_fragment"
                    android:textSize="@dimen/text_fragment"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/discover_second_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_second_title_discover"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/txt_third_title_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/discover_second_list"
                    android:layout_marginBottom="7dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/discover_third_title"
                    android:textColor="@color/text_fragment"
                    android:textSize="@dimen/text_fragment"/>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/discover_third_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_third_title_discover"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>


        </ScrollView>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>